--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,9 @@
+# This is Git's per-user configuration file.
 [user]
-	name = ian29
+# Please adapt and uncomment the following lines:
+#	name = ian villeda
+#	email = ian.villeda@gmail.com
+[user]
 	email = ian.villeda@gmail.com
-[credential]
-	helper = osxkeychain
-
-[color]
-	ui = true
-[alias]
-	log = log --oneline -5 --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	lol = log --graph --decorate --pretty=oneline --abbrev-commit
-        lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+[core]
+	pager = 
